Update snippets.lang and snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103789 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -114,7 +114,7 @@ Firefox также можно найти в ваших любимых социа
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Управление вашими <span>подписками на новостные рассылки</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Отметьте здесь, если вы хотите отписаться от всех писем из Mozilla
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,42 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Спасибо, что обновили ваши почтовые настройки.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Вы были отписаны.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Нам жаль, что вы уходите. Вы не возражаете, если мы спросим, почему вы отписываетесь?
 
 
 ;You send too many emails.
-You send too many emails.
+Вы послали слишком много писем.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Содержимое писем было для меня не интересно.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Дизайн ваших писем делал их слишком трудными для чтения.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Я на это не подписывался.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Я держу связь с Mozilla через Facebook и Твиттер.
 
 
 ;Submit
-Submit
+Отправить
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Спасибо, что рассказали нам, почему вы отписываетесь.
 
 
