--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -118,7 +118,7 @@ Firefox для Android теперь оптимизирован для работ
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Используете Firefox на нескольких компьютерах? Теперь вы можете синхронизировать между ними ваши дополнения. <a href="%">Узнайте, как активировать синхронизацию.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
