Correction of a spelling mistake on [es] survey1.lang.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103791 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/survey1.lang
+++ b/es-ES/survey1.lang
@@ -173,7 +173,7 @@ Hasta hoy nunca has tenido noticias de esto o lo desconoces
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-No hay respuestas correctas o incorrectas, así que, por favor, responde de la forma maś sincera posible.
+No hay respuestas correctas o incorrectas, así que, por favor, responde de la forma más sincera posible.
 
 
 ;A. Firefox is made by Mozilla
