Update snippets.land and newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103800 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -138,42 +138,42 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Շնորհակալություն, որ թարմացրեցիք Ձեր էլ. հասցեն։
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Դուք ապաբաժանորդագրվել եք։
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Մենք ցավում ենք, որ Դուք ապաբաժանորդագրվել եք։ Կասե՞ք մեզ, թե որն է դրա պատճառը։
 
 
 ;You send too many emails.
-You send too many emails.
+Ձեր ուղարկած նամակները շատ էին։
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Նամակների բովանդակությունը ընդունելի չէր ինձ համար։
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Նամակների տեսքը ինձ դուր չէր գալիս։
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ես չեմ բաժանորդագրվել Ձեր նամակներին։
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Փոխարենը ես կհետևեմ Mozilla-ի նորություններին Facebook-ում և Twitter-ում։
 
 
 ;Submit
-Submit
+Հաստատել
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Շնորհակալ ենք անկեղծ պատասխաի համար։
 
 
