--- a/hy-AM/snippets.lang
+++ b/hy-AM/snippets.lang
@@ -118,6 +118,6 @@ Firefo Բետայի օգտվողները. Մի մոռացեք <a href="%">հայ
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Օգտագործու՞մ եք Firefox-ը մի քանի համակարգիչներում։ Այժմ Դուք կարող եք համաժամեցնել Ձեր հավելումները դրանց բոլորում։ <a href="%">Ահա, թե ինչպես ակտիվացնել Սինքը։</a>
 
 
