Take some more fixes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103804 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -150,19 +150,19 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;You send too many emails.
-Ձեր ուղարկած նամակները շատ էին։
+Դուք չափից շատ նամակ էք ուղղարրկում։
 
 
 ;Your content wasn't relevant to me.
-Նամակների բովանդակությունը ընդունելի չէր ինձ համար։
+Նամակների բովանդակությունը ինձ հետաքրքիր չէ։
 
 
 ;Your email design was too hard to read.
-Նամակների տեսքը ինձ դուր չէր գալիս։
+Նամակների տեսքը դյուրընթեռնելի չէր։
 
 
 ;I didn't sign up for this.
-Ես չեմ բաժանորդագրվել Ձեր նամակներին։
+Ես չէի բաժանորդագրվել Ձեր նամակներին։
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
@@ -174,6 +174,6 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Thanks for telling us why you’re leaving.
-Շնորհակալ ենք անկեղծ պատասխաի համար։
+Շնորհակալ ենք անկեղծ պատասխանի համար։
 
 
