--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -150,7 +150,7 @@ Check here if you’d like to be removed from all Mozilla emails
 
 
 ;You send too many emails.
-Դուք չափից շատ նամակ էք ուղղարրկում։
+Դուք չափից շատ նամակ եք ուղարկում։
 
 
 ;Your content wasn't relevant to me.
