--- a/nl/newsletter.lang
+++ b/nl/newsletter.lang
@@ -1,6 +1,5 @@
 # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
 
-
 ;Get Monthly News
 Ontvang maandelijks nieuws
 
@@ -52,10 +51,8 @@ We verheugen ons op het spoedig delen van tips en trucs om het meeste uit Firefo
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Abonneer u op maandelijkse updates en blijf op de hoogte met Mozilla-nieuws, waaronder de nieuwste tips en trucs om het meeste uit uw Firefox-browser te halen. Voor ons is het de perfecte manier om contact te houden!
 
-
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
 We hebben u zojuist per e-mail een bevestigingsbericht gestuurd. Klik op de koppeling voor bevestiging in dit e-mailbericht om uw inschrijving voor deze mailinglijst te valideren.
-
 
 ;Read all about it in our <span>newsletter</span>
 Lees er alles over in onze <span>nieuwsbrief</span>
@@ -64,10 +61,8 @@ Lees er alles over in onze <span>nieuwsbrief</span>
 ;Your newsletter subscription has been confirmed.
 Uw nieuwsbriefinschrijving is bevestigd.
 
-
 ;Format
 Opmaak
-
 
 ;You’re All Set! <span>But Wait, There’s More</span>
 U bent er klaar voor! <span>Maar wacht, er is meer</span>
@@ -76,30 +71,23 @@ U bent er klaar voor! <span>Maar wacht, er is meer</span>
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
 Wilt u de meest relevante info ontvangen? Vertel ons iets meer over uzelf. En registreer meteen voor ander Mozilla-nieuws, nu u er toch bent.
 
-
 ;Firefox & You
 Firefox & u
-
 
 ;Our Other Newsletters:
 Onze andere nieuwsbrieven:
 
-
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
 Ontvang de laatste tips en trucs om het meeste uit uw favoriete browser te halen.
-
 
 ;Firefox Mobile
 Firefox Mobiel
 
-
 ;Learn about the hottest new add-ons and features for Firefox mobile.
 Lees meer over de populairste nieuwe add-ons en functies voor Firefox mobiel.
 
-
 ;Beta News
 Bètanieuws
-
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
 Lees meer over de nieuwste functies in Firefox voor desktop en mobiel voordat de definitieve versie uitkomt.
@@ -114,7 +102,7 @@ Firefox bevindt zich ook op uw favoriete sociale netwerken. Maak verbinding met 
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Beheer uw <span>nieuwsbriefabonnementen</span>
 
 
 ;Subscribe
@@ -126,7 +114,7 @@ Uitschrijven
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Kijk hier als u van alle e-mailberichten van Mozilla wilt worden verwijderd
 
 
 ;Remove me from all Mozilla emails
@@ -136,44 +124,39 @@ Mij van alle e-mail van Mozilla verwijderen
 ;Save Preferences
 Voorkeuren opslaan
 
-
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Bedankt voor het bijwerken van uw e-mailvoorkeuren.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
-
+U bent uitgeschreven.
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+We vinden het jammer dat u weggaat. Wilt u misschien vertellen waarom?
 
 
 ;You send too many emails.
-You send too many emails.
+Jullie sturen te veel e-mailberichten.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Jullie inhoud was voor mij niet relevant.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Jullie e-mailontwerp was te moeilijk om te lezen.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Ik heb me hier niet voor ingeschreven.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Ik houd in plaats hiervan contact met Mozilla via Facebook en Twitter.
 
 
 ;Submit
-Submit
-
+Indienen
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
-
+Bedankt voor het melden van de reden van uw vertrek.
