--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -1,6 +1,5 @@
 # these text snippets are mostly used on about:home
 
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Neem Firefox overal mee naartoe! De nieuwste Firefox voor Android staat voor u klaar. <a href="%s">Download hem nu.</a>
 
@@ -118,10 +117,5 @@ Vraag vrienden om komende functies in Firefox te bekijken. <a href="%">Word een 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-
-
-;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Mooie prijzen! Hollywood-juryleden! Uitroeptekens! <a href="%">Doe mee met Firefox Flicks</a>, de wereldwijde videowedstrijd die ons verhaal vertelt, of stem op uw favorieten!
-
+Gebruikt u Firefox op meerdere computers? U kunt er nu add-ons tussen synchroniseren. <a href="%">Lees hier hoe u Sync kunt activeren.</a>
 
