l10n:lij new string in newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103832 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -138,42 +138,42 @@ Sàrva Preferénse
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Gràçie de avéi agiornòu e teu preferénse de email.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+T'émmo diziscrîto.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Sémmo asæ despiaxûi che ti ne væ. Ti ne voriêsci dî o perché?
 
 
 ;You send too many emails.
-You send too many emails.
+Mandæ tròppe email.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+No me fregâva pròpio nìnte do contegnûo.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+A teu email a l'êa tròppo difìçile da lêze.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Mi no ò firmòu pe quésto.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+M'infórmo de viâtri con Facebook ò Twitter.
 
 
 ;Submit
-Submit
+Abón-ite
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Gràçie de avéine dîto perché ti ne làsci.
 
 
