catalan (ca) localisation of new strings in snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103833 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ca/snippets.lang
+++ b/ca/snippets.lang
@@ -118,6 +118,6 @@ Convideu amics a fer un tast de les properes funcions del Firefox. <a href="%">F
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Feu servir el Firefox en diversos ordinadors? Ara podeu sincronitzar els complements de tots ells. <a href="%">Descobriu com activar el Sync.</a>
 
 
