--- a/pt-BR/upgradedialog.lang
+++ b/pt-BR/upgradedialog.lang
@@ -1,35 +1,91 @@
-# The strings in this file are for the upgrade dialog that is regularly displayed by Firefox to its users of older versions
+# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
+
 
 ;Get the Newest Firefox
 Baixe o Firefox mais recente
 
+
 ;The Newest Firefox is Here!
 O FIrefox mais recente está aqui!
+
 
 ;<a %s>Quick, easy and free update</a>
 <a %s>Atualização rápida, fácil e gratuita</a>
 
+
 ;Fresh new look
 Visual revonado
+
 
 ;Much faster than Firefox 3.6
 Muito mais rápido que o Firefox 3.6
 
+
 ;More awesomeness than ever
 Mais incrível do que nunca
+
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
 Há uma versão mais recente do Firefox que pode melhor protegê-lo de ataques on-line.
 
+
 ;Get the upgrade — it’s fast & free!
 Obtenha a atualização — é rápido e grátis!
+
 
 ;get the latest in security
 tenha o mais recente em segurança
 
+
 ;experience faster performance
 experimente um desempenho mais rápido
 
+
 ;enjoy greater customization
 curta uma personalização mais rica
+
+
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;Stay safe online
+Stay safe online
+
+
+;Enjoy new features
+Enjoy new features
+
+
+;URGENT!
+URGENT!
+
+
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+We recommend:
+
+
+;Upgrading your <a %s>operating system</a>
+Upgrading your <a %s>operating system</a>
+
+
+;Downloading a compatible browser
+Downloading a compatible browser
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installing a free upgrade to your <a %s>operating system</a>
+
 
