--- a/sl/upgradedialog.lang
+++ b/sl/upgradedialog.lang
@@ -1,5 +1,4 @@
-# The strings in this file are for the upgrade dialog that is periodically displayed by Firefox to incitate users to upgrade
-
+# The strings in this file are for upgrade dialogs displayed to Firefox users of older versions, ex: http://www.mozilla.org/firefox/unsupported/details/
 
 
 ;Get the Newest Firefox
@@ -24,5 +23,69 @@ Veliko hitrejši kot Firefox 3.6
 
 ;More awesomeness than ever
 Še bolj mega kot prej
+
+
+;There’s a new version of Firefox that can better protect you against online attacks.
+There’s a new version of Firefox that can better protect you against online attacks.
+
+
+;Get the upgrade — it’s fast & free!
+Get the upgrade — it’s fast & free!
+
+
+;get the latest in security
+get the latest in security
+
+
+;experience faster performance
+experience faster performance
+
+
+;enjoy greater customization
+enjoy greater customization
+
+
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;Stay safe online
+Stay safe online
+
+
+;Enjoy new features
+Enjoy new features
+
+
+;URGENT!
+URGENT!
+
+
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+We recommend:
+
+
+;Upgrading your <a %s>operating system</a>
+Upgrading your <a %s>operating system</a>
+
+
+;Downloading a compatible browser
+Downloading a compatible browser
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installing a free upgrade to your <a %s>operating system</a>
 
 
