--- a/de/upgradedialog.lang
+++ b/de/upgradedialog.lang
@@ -46,46 +46,46 @@ genießen Sie höhere Anpassbarkeit
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Ihre Firefox-Version ist bald anfällig für Angriffe aus dem Internet.
 
 
 ;Stay safe online
-Stay safe online
+Bleiben Sie im Internet geschützt
 
 
 ;Enjoy new features
-Enjoy new features
+Genießen Sie neue Funktionen
 
 
 ;URGENT!
-URGENT!
+DRINGEND!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Ihre Firefox-Version ist nicht mehr vor Angriffen aus dem Internet geschützt.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Dies ist die letzte Erinnerung, bevor Ihr Firefox automatisch auf die neueste Version aktualisiert wird
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox unterstützt die Version Ihres Betriebssystems nicht mehr und wird anfällig sein für Angriffe aus dem Internet.
 
 
 ;We recommend:
-We recommend:
+Wir empfehlen:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Aktualisieren Sie Ihr <a %s>Betriebssystem</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Laden Sie einen kompatiblen Browser herunter
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Installieren Sie ein kostenloses Upgrade für Ihr <a %s>Betriebssystem</a>
 
 
