Bug 740174 - [l10n: sv-SE] Update to snippets.lang and newsletter.lang for www.mozilla.org.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103841 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -114,7 +114,7 @@ Firefox finns också på dina favoritwebbplatser för sociala nätverk. Anslut d
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Hantera dina <span>nyhetsbrevsprenumerationer</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Avsluta prenumeration
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Kryssa i denna ruta om du vill tas bort från alla Mozillas e-brev
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,42 @@ Spara inställningarna
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Tack för att du uppdaterar dina e-postinställningar.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Din prenumeration har avslutats.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Vi tycker det är tråkigt att du lämnar oss. Har du någonting emot att berätta varför du gör det?
 
 
 ;You send too many emails.
-You send too many emails.
+Ni skickar alldeles för många e-brev.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Ert innehåll var inte relevant för mig.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Meddelandeutformningen gjorde e-breven för svåra att läsa.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Jag registrerade mig aldrig för det här.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Jag behåller kontakten med Mozilla på Facebook och Twitter istället.
 
 
 ;Submit
-Submit
+Skicka
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Tack för att du berättar för oss varför du lämnar oss.
 
 
