--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -122,6 +122,6 @@ Fantastiska priser! Hollywooddomare! Utropstecken! <a href="%">Anmäl dig till F
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Använder du Firefox på flera datorer? Nu kan du synkronisera dina tillägg mellan dem. <a href="%">Läs om hur du aktiverar Sync.</a>
 
 
