--- a/eo/upgradedialog.lang
+++ b/eo/upgradedialog.lang
@@ -26,39 +26,34 @@ Pli da ravaĵoj ol iam ajn
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Ekzistas nova versio de Firefox kiu povas pli bone protekti vin kontraŭ retatakoj.
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
-
+Ricevu la ĝisdatigon — estas rapide kaj senpage!
 
 ;get the latest in security
 get the latest in security
 
 
 ;experience faster performance
-experience faster performance
-
+spertu pli rapida funkciado
 
 ;enjoy greater customization
-enjoy greater customization
-
+ĝuu ampleksigitan agordadon
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Via versio de Firefox estos baldaŭ sendefenda kontraŭ retatakoj.
 
 
 ;Stay safe online
-Stay safe online
-
+Estu sekura en la reto
 
 ;Enjoy new features
-Enjoy new features
-
+Ĝuu novajn trajtojn
 
 ;URGENT!
-URGENT!
+URĜA!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
@@ -74,18 +69,17 @@ Firefox no longer supports your operating system version and will be vulnerable 
 
 
 ;We recommend:
-We recommend:
+Ni rekomendas:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Ĝisdatigi vian <a %s>mastruman sistemon</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
-
+Elŝuti kongruan retesplorilon
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instali senpagan ĝisdatigon por via <a %s>mastruma sistemo</a>
 
 
