Bug 742730 - [l10n: sv-SE] Updated upgradedialog.lang file for www.mozilla.org. Translation by Mikael Hiort af Ornäs <mikael.hafo@gmail.com>
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103853 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/upgradedialog.lang
+++ b/sv-SE/upgradedialog.lang
@@ -26,66 +26,66 @@ Nu ännu smartare
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Det finns en ny version av Firefox som ger dig bättre skydd mot nätangrepp.
 
 
 ;Get the upgrade — it’s fast & free!
-Get the upgrade — it’s fast & free!
+Hämta uppdateringen — det går snabbt och är gratis!
 
 
 ;get the latest in security
-get the latest in security
+få det senaste inom säkerhetsområdet
 
 
 ;experience faster performance
-experience faster performance
+upplev snabbheten i den ökade prestandan
 
 
 ;enjoy greater customization
-enjoy greater customization
+få glädje av ännu större anpassningsbarhet
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Din version av Firefox kommer snart att bli sårbar för nätangrepp.
 
 
 ;Stay safe online
-Stay safe online
+Surfa säkert
 
 
 ;Enjoy new features
-Enjoy new features
+Upptäck nya funktioner
 
 
 ;URGENT!
-URGENT!
+VIKTIGT!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Your version of Firefox is no longer protected against online attacks.
+Din version av Firefox är inte längre skyddad mot nätangrepp.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Det här är sista påminnelsen innan du automatiskt uppdateras till den senaste versionen
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox stödjer inte längre din operativsystemsversion och kommer att vara sårbar för nätangrepp.
 
 
 ;We recommend:
-We recommend:
+Vi rekommenderar att du:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Uppgraderar ditt <a %s>operativsystem</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Hämtar en kompatibel webbläsare
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Installerar en gratisuppgradering av ditt <a %s>operativsystem</a>
 
 
